--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,11 +12,12 @@
         const checkout = document.getElementById('checkout');
         checkout.addEventListener('click',async()=>{
             const response = await fetch('/create-order',{
-                method: 'POST',
+                method: 'POST'
                 //body: JSON.stringify([{}])
-            })
+            });
             const data = await response.json();
             console.log(data);
+            window.location.href = data.links[1].href;
         });
     </script>
 </body>
