--- a/src/routes/public/index.html
+++ b/src/routes/public/index.html
@@ -16,7 +16,7 @@
             })
             const data = await response.json();
             console.log(data);
-            window.location.href = data.links[1].href=
+            window.location.href = data.links[1].href
         });
     </script>
 </body>
